--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Se queremos médico presente, motivado e permanecendo nas comunidades, precisamo
 <div id="contador" class="contador">Carregando apoios...</div>
 
 <div class="cta-box">
-  <a href="#" class="cta-button" target="_blank">
+  <a href="https://www12.senado.leg.br/ecidadania/visualizacaoideia?id=213702" class="cta-button" target="_blank">
     APOIAR A PROPOSTA NO SENADO
   </a>
   <div class="footer-note">
